# controllers/userController.js
@@ -1,4 +1,6 @@
 const userModel = require('../models/user')
+const jwt = require('jsonwebtoken')
+const bcrypt = require('bcrypt')
 
 //GET all users
 async function getUsers(req, res) {
@@ -15,7 +17,7 @@ async function getOneUser(req, res) {
     try {
         const user = await userModel.findById(req.params.id)
         if(!user) {
-            res.status(404).json({ message: 'User not found' })
+            return res.status(404).json({ message: 'User not found' })
         }
         res.status(200).json(user)
     } catch(error) {
@@ -26,21 +28,33 @@ async function getOneUser(req, res) {
 //POST
 async function createUser(req, res) {
     try {
-        const { name, email, age, country } = req.body
-        if(!name || !email) {
-            res.status(400).json({ message: 'Name and email are required' })
+        const { name, email, password, age, country } = req.body
+
+        if (!name || !email || !password) {
+            return res.status(400).json({ message: "Name, email & password are required" })
         }
-        const user = new userModel({
+
+        const existingUser = await userModel.findOne({ email })
+        if (existingUser) {
+            return res.status(400).json({ message: "Email already registered" })
+        }
+
+        const hashedPassword = await bcrypt.hash(password, 10)
+        const newUser = await userModel.create({
             name,
             email,
+            password: hashedPassword,
             age,
             country
-        })
+        });
 
-        const saved = await user.save()
-        res.status(200).json(saved)
-    } catch(error) {
-        res.status(500).json({ message: 'Error creating user', error })
+        return res.status(201).json({
+            message: "User registered successfully",
+            userId: newUser._id
+        });
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({ message: "Error registering user", error: error.message })
     }
 }
 
@@ -53,7 +67,7 @@ async function updateUser(req, res) {
             { new: true, runValidators: true }
         );
         if(!updated) {
-            res.status(400).json({ message: 'User not found' })
+           return res.status(400).json({ message: 'User not found' })
         }
         res.status(200).json(updated)
     } catch(error) {
@@ -66,11 +80,36 @@ async function deleteUser(req, res) {
     try {
         const deleted = await userModel.findByIdAndDelete(req.params.id)
         if(!deleted) {
-            res.status(404).json({ message: 'User not found'})
+            return res.status(404).json({ message: 'User not found'})
         }
         res.status(200).json({ message: 'User deleted successfully' })
     } catch(error) {
         res.status(500).json({ message: 'Error deleting user', error})
+    }
+}
+
+// login
+async function login(req, res) {
+    try {
+        const { email, password } = req.body
+        const user = await userModel.findOne({ email })
+        if(!user) {
+            return res.status(400).json({ message: 'Invalid email or password' })
+        }
+
+        const valid = await bcrypt.compare(password, user.password)
+        if(!valid) {
+            return res.status(400).json({ message: 'Invalid email or password' })
+        }
+
+        const token = jwt.sign(
+            { _id: user._id },
+            process.env.JWT_SECRET,
+            {expiresIn: '1d'}
+        )
+        res.json({ token })
+    } catch(error) {
+        res.status(500).json({ message: 'Login error', error })
     }
 }
 
@@ -79,5 +118,6 @@ module.exports = {
     getOneUser,
     createUser,
     updateUser,
-    deleteUser
+    deleteUser,
+    login
 }
