# middleware/authMiddleware.js
@@ -1,0 +1,19 @@
+const jwt = require('jsonwebtoken');
+
+function auth(req, res, next) {
+    const token = req.headers.authorization;
+
+    if (!token) {
+        return res.status(401).json({ message: 'Access denied. No token provided.' });
+    }
+
+    try {
+        const decoded = jwt.verify(token, process.env.JWT_SECRET);
+        req.user = decoded;
+        next();
+    } catch (error) {
+        res.status(400).json({ message: 'Invalid token.', error });
+    }
+}
+
+module.exports = auth;
