# models/user.js
@@ -3,9 +3,9 @@ const mongoose = require('mongoose');
 const userSchema = new mongoose.Schema({
     name: { type: String, required: true },
     email: { type: String, required: true, unique: true },
+    password: { type: String, required: true },
     age: { type: Number, min: 1 },
     country: { type: String },
-    isActive: { type: Boolean, default: true },
     createdAt: { type: Date, default: Date.now }
 });
 
