# routes/userRoutes.js
@@ -5,6 +5,7 @@ const userController = require('../controllers/userController')
 router.get('/', userController.getUsers)
 router.get('/:id', userController.getOneUser)
 router.post('/', userController.createUser)
+router.post('/login', userController.login)
 router.put('/:id', userController.updateUser)
 router.delete('/:id', userController.deleteUser)
 
